WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202089
WebIDBConnectionToClient does not need to be RefCounted or a SessionID
https://bugs.webkit.org/show_bug.cgi?id=202089
Summary
WebIDBConnectionToClient does not need to be RefCounted or a SessionID
Chris Dumez
Reported
2019-09-21 20:38:11 PDT
WebIDBConnectionToClient does not need to be RefCounted or a SessionID.
Attachments
Patch
(19.36 KB, patch)
2019-09-21 20:42 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-21 20:42:59 PDT
Created
attachment 379337
[details]
Patch
Chris Dumez
Comment 2
2019-09-21 22:16:27 PDT
Comment on
attachment 379337
[details]
Patch Clearing flags on attachment: 379337 Committed
r250193
: <
https://trac.webkit.org/changeset/250193
>
Chris Dumez
Comment 3
2019-09-21 22:16:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-09-21 22:17:17 PDT
<
rdar://problem/55596685
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug